@@ -1,6 +1,14 @@
 2022-01-06 Gabriele Gorla <gorlik@yahoo.com>
+    * sdcc/device/include/string.h,
+      sdcc/device/include/stdlib.h,
+      sdcc/device/include/stdatomic.h,
+      sdcc/device/include/stdarg.h,
+      sdcc/device/include/setjmp.h:
+      Add mos6502 to standard includes.
+
+2022-01-06 Gabriele Gorla <gorlik@yahoo.com>
     * support/regression/ports/uc6502/spec.mk:
-    Rename m6502 port to mos6502.
+      Rename m6502 port to mos6502.
 
 2022-01-05 Gabriele Gorla <gorlik@yahoo.com>
     * sdas/as6500/clean.mk,
@@ -15,7 +23,7 @@
     * src/hc08/gen.c,
       src/hc08/main.c,
       src/hc08/ralloc.c:
-      replace TRUE/FALSE with true/false.
+      Replace TRUE/FALSE with true/false.
       
 2022-01-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
